--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@dnd-kit/abstract": "^0.1.21",
     "@dnd-kit/helpers": "^0.1.21",
     "@dnd-kit/react": "^0.1.21",
+    "@hookform/devtools": "^4.4.0",
     "@hookform/resolvers": "^5.2.2",
     "@netlify/vite-plugin-tanstack-start": "^1.0.2",
     "@radix-ui/react-checkbox": "^1.3.3",
