--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "check": "biome check"
   },
   "dependencies": {
+    "@convex-dev/react-query": "0.0.0-alpha.11",
     "@dnd-kit/abstract": "^0.1.21",
     "@dnd-kit/helpers": "^0.1.21",
     "@dnd-kit/react": "^0.1.21",
@@ -26,6 +27,7 @@
     "@t3-oss/env-core": "^0.13.8",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-devtools": "^0.8.1",
+    "@tanstack/react-query": "^5.90.7",
     "@tanstack/react-router": "^1.135.2",
     "@tanstack/react-router-devtools": "^1.135.2",
     "@tanstack/react-router-ssr-query": "^1.135.2",
@@ -33,6 +35,7 @@
     "@tanstack/router-plugin": "^1.135.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "convex": "^1.29.0",
     "lucide-react": "^0.553.0",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
