--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@tanstack/react-router-ssr-query": "^1.135.2",
     "@tanstack/react-start": "^1.135.2",
     "@tanstack/router-plugin": "^1.135.2",
+    "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.29.0",
@@ -53,6 +54,7 @@
     "@tanstack/devtools-vite": "^0.3.11",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/react": "^16.3.0",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.3",
     "@types/react-dom": "^19.2.3",
